test/tests/stages/8_loops/valid/extra_credit/case_block.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 4
                      None: 
                    None: 
                  Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: b
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CSwitch: 
                TIdentifier: (null)
                Bool: 0
                CConstant: 
                  CConstInt: 
                    TInt: 2
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                          CCompound: 
                            CB: 
                              List[2]: 
                                CD: 
                                  CVarDecl: 
                                    CVariableDeclaration: 
                                      TIdentifier: a
                                      CSingleInit: 
                                        CConstant: 
                                          CConstInt: 
                                            TInt: 8
                                          None: 
                                        None: 
                                      Int: 
                                      None: 
                                CS: 
                                  CExpression: 
                                    CAssignment: 
                                      None: 
                                      CVar: 
                                        TIdentifier: b
                                        None: 
                                      CVar: 
                                        TIdentifier: a
                                        None: 
                                      None: 
                List[0]: 
            CS: 
              CReturn: 
                CBinary: 
                  CAnd: 
                  CBinary: 
                    CEqual: 
                    CVar: 
                      TIdentifier: a
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 4
                      None: 
                    None: 
                  CBinary: 
                    CEqual: 
                    CVar: 
                      TIdentifier: b
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 8
                      None: 
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
